tests/ui/diagnostic-not-implemented-try-from-bytes.nightly.stderr
error[E0277]: the trait bound `NotZerocopy: TryFromBytes` is not satisfied
  --> $DIR/diagnostic-not-implemented-try-from-bytes.rs:16:28
   |
16 |     takes_try_from_bytes::<NotZerocopy>();
   |                            ^^^^^^^^^^^ unsatisfied trait bound
   |
help: the trait `TryFromBytes` is not implemented for `NotZerocopy`
  --> $DIR/../include.rs:15:5
   |
15 |     pub struct NotZerocopy<T = ()>(pub T);
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = note: Consider adding `#[derive(TryFromBytes)]` to `NotZerocopy`
   = help: the following other types implement trait `TryFromBytes`:
             ()
             (A, B)
             (A, B, C)
             (A, B, C, D)
             (A, B, C, D, E)
             (A, B, C, D, E, F)
             (A, B, C, D, E, F, G)
             (A, B, C, D, E, F, G, H)
           and 153 others
note: required by a bound in `takes_try_from_bytes`
  --> $DIR/diagnostic-not-implemented-try-from-bytes.rs:19:28
   |
19 | fn takes_try_from_bytes<T: TryFromBytes>() {}
   |                            ^^^^^^^^^^^^ required by this bound in `takes_try_from_bytes`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
